--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <title>Tic tac toe</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="board">
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
+    </div>
+
+    <div data-winning-message class="winning-message">
+        <p>X Win!</p>
+        <button>Restart</button>
+    </div>
 
     <script src="./main.js"></script>
 </body>
