--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="board">
-        <div data-cell class="cell"></div>
+        <div data-cell class="cell">X</div>
         <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
