--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="board">
-        <div data-cell class="cell">X</div>
-        <div data-cell class="cell"></div>
+        <div data-cell class="cell x"></div>
+        <div data-cell class="cell circle"></div>
         <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
