new player hover effect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Tic tac toe</title>
 </head>
 <body>
-    <div class="board">
+    <div class="board x">
         <div data-cell class="cell x"></div>
         <div data-cell class="cell circle"></div>
         <div data-cell class="cell"></div>
