player marker and swap turn

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Tic tac toe</title>
 </head>
 <body>
-    <div class="board x">
-        <div data-cell class="cell x"></div>
-        <div data-cell class="cell circle"></div>
+    <div data-board class="board">
+        <div data-cell class="cell"></div>
+        <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
         <div data-cell class="cell"></div>
