show winner/draw message

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div data-winning-message class="winning-message">
-        <p>X Win!</p>
+        <p data-winning-message-text>X Win!</p>
         <button>Restart</button>
     </div>
 
