--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div data-winning-message class="winning-message">
         <p data-winning-message-text>X Win!</p>
-        <button>Restart</button>
+        <button data-winning-message-button>Restart</button>
     </div>
 
     <script src="./main.js"></script>
